cluster/apps/networking-system/ingresses/base/firefly-iii/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-iii
  labels:
    app.kubernetes.io/name: firefly-iii
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`money.${SECRET_DOMAIN_1}`)
      middlewares:
        - name: secure-headers
      services:
        - name: firefly-iii
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_1//./-}-prod-tls
